appId: dev.horologia.mobile
---
- launchApp
- pressKey: Home
- longPressOn:
    point: "50%,60%"
- extendedWaitUntil:
    visible: Edit
    timeout: 10000
- tapOn: Edit
- tapOn: Add Widget
- tapOn: Search Widgets
- inputText: Horologia
- extendedWaitUntil:
    visible: Horologia
    timeout: 10000
- hideKeyboard
- tapOn:
    point: "50%,87%"
- extendedWaitUntil:
    visible: " Add Widget"
    timeout: 10000
- swipe:
    start: "80%,50%"
    end: "20%,50%"
    duration: 500
- tapOn: " Add Widget"
- extendedWaitUntil:
    visible: Done
    timeout: 30000
- tapOn: Done
- extendedWaitUntil:
    visible: Water the herbs
    timeout: 30000
